Added deploy script

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 FC      = gfortran
 NVCC    = nvcc
 
-OPENBLASDIR=/tmp/OpenBLAS-0.2.20
-LIBMAGMADIR=/tmp/magma-2.3.0
+OPENBLASDIR=../OpenBLAS-0.2.20
+LIBMAGMADIR=../magma-2.3.0
 
 
 ifeq ($(FPREC), double)
@@ -16,7 +16,7 @@ endif
 FP_FLAGS=-fdefault-real-8 -fdefault-double-8
 FCFLAGS = $(EXTRA) $(FPREC) -fPIC -g -cpp -flto -Wall -Wno-unused-dummy-argument -march=native -Ofast -funroll-loops
 PARALLEL= -fopenmp
-NVFLAGS = $(EXTRA) $(NVPREC) -I$(LIBMAGMADIR)/include -DMAGMA_ILP64 -Xcompiler -fPIC -arch=sm_35 -use_fast_math -O3 -Xptxas --opt-level=3 -Xptxas --allow-expensive-optimizations=true 
+NVFLAGS = $(EXTRA) $(NVPREC) -I$(LIBMAGMADIR)/include -DMAGMA_ILP64 -Xcompiler -fPIC -arch=sm_35 -O3 -Xptxas --opt-level=3 -Xptxas --allow-expensive-optimizations=true 
 FLFLAGS = $(OPENBLASDIR)/libopenblas.a -fopenmp -L$(OPENBLASDIR)
 RM      = rm -f
 
